--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>Master commit initial</p>
     <p>Cambio inicial en la rama dev</p>
+    <h1>Cambios referentes a la funcionalidad</h1>
 </body>
 </html>
