--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Master commit initial</p>
     <p>Cambio inicial en la rama dev</p>
     <h1>Cambios referentes a la funcionalidad</h1>
+    <h2>Un cambio más dentro de la misma funcionalidad</h2>
 </body>
 </html>
