--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Cambio inicial en la rama dev</p>
     <h1>Cambios referentes a la funcionalidad</h1>
     <h2>Un cambio más dentro de la misma funcionalidad</h2>
+    <p>Cambio en release</p>
 </body>
 </html>
