--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Cambios referentes a la funcionalidad</h1>
     <h2>Un cambio más dentro de la misma funcionalidad</h2>
     <p>Cambio en release</p>
+    <h1>Un cambio en la funcionalidad numero dos</h1>
 </body>
 </html>
